--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -856,7 +856,7 @@
     "            self.add_intercept()\n",
     "\n",
     "    def add_intercept(self):\n",
-    "        \"\"\"Add a column of ones named 'intercept'.\"\"\"\n",
+    "        \"\"\"Add a column of ones named 'intercept' as the first column (if missing).\"\"\"\n",
     "        if not isinstance(self.x, pd.DataFrame):\n",
     "            raise TypeError(\"x must be a pandas DataFrame.\")\n",
     "        if \"intercept\" not in self.x.columns:\n",
@@ -864,17 +864,19 @@
     "        return self\n",
     "\n",
     "    def _p_values_from_t(self, t_vals):\n",
-    "        \"\"\"Approximate two-tailed p-values using the normal distribution.\"\"\"\n",
+    "        \"\"\"Two-sided p-values using Normal(0,1) approximation (no SciPy).\"\"\"\n",
     "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        return 2.0 * (1.0 - 0.5 * (1.0 + np.erf(t / np.sqrt(2.0))))\n",
+    "        # Use math.erf; vectorize for array input\n",
+    "        erf_vec = np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))\n",
+    "        phi_part = 0.5 * (1.0 + erf_vec(t))  # Phi(|t|)\n",
+    "        return 2.0 * (1.0 - phi_part)\n",
     "\n",
     "    def ols_regression(self):\n",
-    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
+    "        \"\"\"Perform OLS and populate self.results (full precision values).\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
-    "            else:\n",
-    "                raise ValueError(\"regression_type must be 'ols' or 'logit'.\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
     "\n",
     "        if not isinstance(self.x, pd.DataFrame) or not isinstance(self.y, pd.DataFrame):\n",
     "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
@@ -883,7 +885,12 @@
     "\n",
     "        X = self.x.to_numpy(dtype=float)\n",
     "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
+    "\n",
     "        n, k = X.shape\n",
+    "        if y.shape[0] != n:\n",
+    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
+    "        if n <= k:\n",
+    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
     "        XtX = X.T @ X\n",
     "        try:\n",
@@ -896,11 +903,13 @@
     "        resid = y - y_hat\n",
     "        dof = n - k\n",
     "        sigma2 = float((resid.T @ resid) / dof)\n",
+    "\n",
     "        var_beta = sigma2 * XtX_inv\n",
     "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
     "\n",
     "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
     "            t_stats = (beta / se).flatten()\n",
+    "\n",
     "        p_vals = self._p_values_from_t(t_stats)\n",
     "\n",
     "        self.results = {}\n",
@@ -914,7 +923,11 @@
     "        return self\n",
     "\n",
     "    def summary(self):\n",
-    "        \"\"\"Return regression results rounded to 4 decimals.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Return DataFrame with columns (in order):\n",
+    "        'Variable name', 'coefficient value', 'standard error', 't-statistic', 'p-value'\n",
+    "        Rounded to 4 decimals for display/output tests.\n",
+    "        \"\"\"\n",
     "        if not self.results:\n",
     "            self.ols_regression()\n",
     "\n",
@@ -929,6 +942,7 @@
     "                \"p-value\": round(r[\"p_value\"], 4),\n",
     "            })\n",
     "        return pd.DataFrame(rows)\n",
+    "\n",
     "\n",
     "\n"
    ]
