--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -861,6 +861,14 @@
     "import math\n",
     "\n",
     "class RegressionModel:\n",
+    "    \"\"\"\n",
+    "    OLS regression class that computes coefficients, standard errors, t-stats, and p-values.\n",
+    "    - x and y should be pandas DataFrames (y with exactly one column).\n",
+    "    - If create_intercept=True, an 'intercept' column of ones is added to x (as the first column).\n",
+    "    - .ols_regression() fills self.results with full-precision values.\n",
+    "    - .summary() returns a DataFrame in the required format (rounded for display).\n",
+    "    \"\"\"\n",
+    "\n",
     "    def __init__(self, x, y, create_intercept=True, regression_type=\"ols\"):\n",
     "        self.x = x\n",
     "        self.y = y\n",
@@ -879,14 +887,16 @@
     "        return self\n",
     "\n",
     "    def _p_values_from_t(self, t_vals):\n",
-    "        \"\"\"Two-sided p-values using Normal(0,1) approximation; no SciPy needed.\"\"\"\n",
+    "        \"\"\"\n",
+    "        Two-sided p-values using the Normal(0,1) approximation (keeps things SciPy-free):\n",
+    "        p = 2 * (1 - Phi(|t|)) where Phi is computed via math.erf.\n",
+    "        \"\"\"\n",
     "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        erf_vec = np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))\n",
-    "        phi = 0.5 * (1.0 + erf_vec(t))\n",
+    "        phi = 0.5 * (1.0 + np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))(t))\n",
     "        return 2.0 * (1.0 - phi)\n",
     "\n",
     "    def ols_regression(self):\n",
-    "        \"\"\"Perform ordinary least squares regression.\"\"\"\n",
+    "        \"\"\"Run ordinary least squares and populate self.results (full precision).\"\"\"\n",
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
@@ -897,57 +907,8 @@
     "        if self.y.shape[1] != 1:\n",
     "            raise ValueError(\"y must have exactly one column.\")\n",
     "\n",
-    "        X = self.x.to_numpy(dtype=float)\n",
-    "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
-    "        n, k = X.shape\n",
-    "        if y.shape[0] != n:\n",
-    "            raise ValueError(\"x and y must have the same number of rows.\")\n",
-    "        if n <= k:\n",
-    "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
-    "\n",
-    "        XtX = X.T @ X\n",
-    "        try:\n",
-    "            XtX_inv = np.linalg.inv(XtX)\n",
-    "        except np.linalg.LinAlgError:\n",
-    "            XtX_inv = np.linalg.pinv(XtX)\n",
-    "\n",
-    "        beta = XtX_inv @ (X.T @ y)\n",
-    "        resid = y - (X @ beta)\n",
-    "        dof = n - k\n",
-    "        sigma2 = float((resid.T @ resid) / dof)\n",
-    "        var_beta = sigma2 * XtX_inv\n",
-    "        se = np.sqrt(np.diag(var_beta)).reshape(-1, 1)\n",
-    "\n",
-    "        with np.errstate(divide=\"ignore\", invalid=\"ignore\"):\n",
-    "            t_stats = (beta / se).flatten()\n",
-    "        p_vals = self._p_values_from_t(t_stats)\n",
-    "\n",
-    "        self.results = {}\n",
-    "        for i, col in enumerate(self.x.columns):\n",
-    "            self.results[col] = {\n",
-    "                \"coefficient\": float(beta[i, 0]),\n",
-    "                \"standard_error\": float(se[i, 0]),\n",
-    "                \"t_stat\": float(t_stats[i]),\n",
-    "                \"p_value\": float(p_vals[i]),\n",
-    "            }\n",
-    "        return self\n",
-    "\n",
-    "    def summary(self):\n",
-    "        \"\"\"Return results rounded to 4 decimals.\"\"\"\n",
-    "        if not self.results:\n",
-    "            self.ols_regression()\n",
-    "\n",
-    "        rows = []\n",
-    "        for var in self.x.columns:\n",
-    "            r = self.results[var]\n",
-    "            rows.append({\n",
-    "                \"Variable name\": var,\n",
-    "                \"coefficient value\": round(r[\"coefficient\"], 4),\n",
-    "                \"standard error\": round(r[\"standard_error\"], 4),\n",
-    "                \"t-statistic\": round(r[\"t_stat\"], 4),\n",
-    "                \"p-value\": round(r[\"p_value\"], 4),\n",
-    "            })\n",
-    "        return pd.DataFrame(rows)\n"
+    "        X = self.x.to_numpy(dtype=float)                    # (n, k)\n",
+    "        y\n"
    ]
   }
  ],
