--- a/Lesson.ipynb
+++ b/Lesson.ipynb
@@ -849,7 +849,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "adbc4202-9586-4e18-b8d6-54291c2174f1",
    "metadata": {},
    "outputs": [],
@@ -887,11 +887,10 @@
     "        return self\n",
     "\n",
     "    def _p_values_from_t(self, t_vals):\n",
-    "        \"\"\"Compute two-tailed p-values using the normal approximation (no SciPy).\"\"\"\n",
+    "        \"\"\"Compute two-tailed p-values using normal approximation (no SciPy).\"\"\"\n",
     "        t = np.abs(np.asarray(t_vals, dtype=float))\n",
-    "        # Use math.erf vectorized\n",
     "        erf_vec = np.vectorize(lambda z: math.erf(z / math.sqrt(2.0)))\n",
-    "        phi = 0.5 * (1.0 + erf_vec(t))  # Φ(|t|)\n",
+    "        phi = 0.5 * (1.0 + erf_vec(t))\n",
     "        return 2.0 * (1.0 - phi)\n",
     "\n",
     "    def ols_regression(self):\n",
@@ -899,25 +898,21 @@
     "        if self.regression_type != \"ols\":\n",
     "            if self.regression_type == \"logit\":\n",
     "                raise NotImplementedError(\"Logit not required this week.\")\n",
-    "            else:\n",
-    "                raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
+    "            raise ValueError(\"regression_type must be 'ols' or 'logit' (stub).\")\n",
     "\n",
     "        if not isinstance(self.x, pd.DataFrame) or not isinstance(self.y, pd.DataFrame):\n",
     "            raise TypeError(\"x and y must be pandas DataFrames.\")\n",
     "        if self.y.shape[1] != 1:\n",
     "            raise ValueError(\"y must have exactly one column.\")\n",
     "\n",
-    "        # Convert to numpy\n",
     "        X = self.x.to_numpy(dtype=float)\n",
     "        y = self.y.to_numpy(dtype=float).reshape(-1, 1)\n",
     "        n, k = X.shape\n",
-    "\n",
     "        if y.shape[0] != n:\n",
     "            raise ValueError(\"x and y must have the same number of rows.\")\n",
     "        if n <= k:\n",
     "            raise ValueError(\"Not enough observations for OLS (n must exceed k).\")\n",
     "\n",
-    "        # Beta = (X'X)^-1 X'y\n",
     "        XtX = X.T @ X\n",
     "        try:\n",
     "            XtX_inv = np.linalg.inv(XtX)\n",
@@ -936,7 +931,6 @@
     "            t_stats = (beta / se).flatten()\n",
     "        p_vals = self._p_values_from_t(t_stats)\n",
     "\n",
-    "        # Store results\n",
     "        self.results = {}\n",
     "        for i, col in enumerate(self.x.columns):\n",
     "            self.results[col] = {\n",
